@@ -1,3 +1,7 @@
+2014-10-03:
+	* (seebs) in fact, suppress a lot of sanity checks entirely for
+	  did_unlink.
+
 2014-10-02:
 	* (seebs) use sqlite3_bind_int64 for inodes.
 	* (seebs) suppress path mismatch warnings for did_unlink.
